--- a/springcloud2020/cloud-consumer-feign-order80/src/main/resources/application.yml
+++ b/springcloud2020/cloud-consumer-feign-order80/src/main/resources/application.yml
@@ -16,4 +16,4 @@ ribbon:
 logging:
   level:
     # feign日志以什么级别监控哪个接口
-    com.atguigu.springcloud.service.PaymentFeignService: debug
+    com.lk.springcloud.service.PaymentFeignService: debug
