--- a/springcloud2020/pom.xml
+++ b/springcloud2020/pom.xml
@@ -28,6 +28,9 @@
         <module>cloud-config-center-3344</module>
         <module>cloud-config-client-3355</module>
         <module>cloud-config-client-3366</module>
+        <module>cloudalibaba-provider-payment9001</module>
+        <module>cloudalibaba-provider-payment9002</module>
+        <module>cloudalibaba-config-nacos-client3377</module>
     </modules>
 
     <!--统一管理jar包版本-->
